alteração do arquivo index-portfolio.html ( por Abraão )

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -27,13 +27,13 @@
 <nav id="navbar" class="nav">
     <ul class="nav-list">
       <li>
-        <a href="#welcome-section">About</a>
+        <a href="#welcome-section">Ínicio</a>
       </li>
       <li>
-        <a href="#projects">Work</a>
+        <a href="#projects">projetos</a>
       </li>
       <li>
-        <a href="#contact">Contact</a>
+        <a href="#contact">contatos</a>
       </li>
     </ul>
   </nav>
@@ -43,8 +43,8 @@
   <!-- START WELCOME SECTION -->
   
   <section id="welcome-section" class="welcome-section">
-    <h1>Hey I am Mimic</h1>
-    <p>a web developer</p>
+    <h1>Bem vindo ao nosso Portfólio.</h1>
+    <p>alunos do p8 de info</p>
   </section>
   
   <!-- END WELCOME SECTION -->
@@ -52,7 +52,7 @@
   <!-- START PROJECTS SECTION -->
   
   <section id="projects" class="projects-section">
-    <h2 class="projects-section-header">These are some of my projects</h2>
+    <h2 class="projects-section-header">Estes são alguns dos nossos projetos pessoais</h2>
     <div class="projects-grid">
       <a
         href="https://codepen.io/freeCodeCamp/full/zNqgVx"
@@ -166,8 +166,8 @@
   
   <section id="contact" class="contact-section">
     <div class="contact-section-header">
-      <h2>Let's work together...</h2>
-      <p>How do you take your coffee?</p>
+      <h2>Vamos fazer um projetinho...</h2>
+      <p>estamos aguardando seu contato</p>
     </div>
     <div class="contact-links">
       <a
@@ -189,11 +189,11 @@
         class="btn contact-details"
         ><i class="fab fa-twitter"></i> Twitter</a
       >
-      <a href="mailto:example@example.com" class="btn contact-details"
-        ><i class="fas fa-at"></i> Send a mail</a
+      <a href="mailto:codeyote02@gmail.com" class="btn contact-details"
+        ><i class="fas fa-at"></i> Gmail</a
       >
-      <a href="tel:555-555-5555" class="btn contact-details"
-        ><i class="fas fa-mobile-alt"></i> Call me</a
+      <a href="tel:85 99656-3648" class="btn contact-details"
+        ><i class="fas fa-mobile-alt"></i> Telefone</a
       >
     </div>
   </section>
@@ -204,8 +204,7 @@
   
   <footer>
     <p>
-      **This is just a fake portfolio. All the projects and contact details given
-      are not real.
+    
     </p>
     <p>
       &copy; Created for
