Alteração dos arquivos .html e .css do projeto Pagina-Login (por joaowesley5678)

--- a/Site-Parallax/index-parallax.html
+++ b/Site-Parallax/index-parallax.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +11,7 @@
 
     <div class="content">
         <div class="paralax">
+            <h1>CodeYote</h1>
             <div class="layer rocks2"></div>
             <div class="layer rocks1"></div>
             <div class="layer hills"></div>
@@ -21,8 +22,8 @@
     
     <div id="link">
         <a class="url" 
-           href="http://www.codepen.io/IlyasR" 
-           target="_blank">Visit my profile!</a>
+           href="https://github.com/CodeYote02" 
+           target="_blank">Visit CodeYote Official Github Account!</a>
     </div>
     
 </body>
