--- a/Site-Parallax/index-parallax.html
+++ b/Site-Parallax/index-parallax.html
@@ -11,7 +11,7 @@
 
     <div class="content">
         <div class="paralax">
-            <h1>CodeYote</h1>
+            <h1>CodeYote<span class="blink">_</span></h1>
             <div class="layer rocks2"></div>
             <div class="layer rocks1"></div>
             <div class="layer hills"></div>
