--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -27,13 +27,13 @@
 <nav id="navbar" class="nav">
     <ul class="nav-list">
       <li>
-        <a href="#welcome-section">Ínicio</a>
+        <a href="#welcome-section">Início</a>
       </li>
       <li>
-        <a href="#projects">projetos</a>
+        <a href="#projects">Projetos</a>
       </li>
       <li>
-        <a href="#contact">contatos</a>
+        <a href="#contact">Contatos</a>
       </li>
     </ul>
   </nav>
@@ -66,7 +66,7 @@
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Tribute Page
+          Medidas de Saúde
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
@@ -156,7 +156,7 @@
       href="https://codepen.io/FreeCodeCamp/"
       class="btn btn-show-all"
       target="_blank"
-      >Show all<i class="fas fa-chevron-right"></i
+      >Ver mais<i class="fas fa-chevron-right"></i
     ></a>
   </section>
   
@@ -178,17 +178,12 @@
       >
       <a
         id="profile-link"
-        href="https://github.com/freecodecamp"
+        href="https://github.com/CodeYote02/projetos-n1.git"
         target="_blank"
         class="btn contact-details"
         ><i class="fab fa-github"></i> GitHub</a
       >
-      <a
-        href="https://twitter.com/freecodecamp"
-        target="_blank"
-        class="btn contact-details"
-        ><i class="fab fa-twitter"></i> Twitter</a
-      >
+     
       <a href="mailto:codeyote02@gmail.com" class="btn contact-details"
         ><i class="fas fa-at"></i> Gmail</a
       >
@@ -209,7 +204,7 @@
     <p>
       &copy; Created for
       <a href="https://www.freecodecamp.com/" target="_blank"
-        >freeCodeCamp <i class="fab fa-free-code-camp"></i
+        >CodeYote02 <i class="fab fa-free-code-camp"></i
       ></a>
     </p>
   </footer>
