alterações no .html e .css,inclusões de fotos e links, por Abraão Alves

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -30,6 +30,9 @@
         <a href="#welcome-section">Início</a>
       </li>
       <li>
+        <a href="#integrantes">Integrantes</a>
+      </li>
+      <li>
         <a href="#projects">Projetos</a>
       </li>
       <li>
@@ -45,6 +48,12 @@
   <section id="welcome-section" class="welcome-section">
     <h1>Bem vindo ao nosso Portfólio.</h1>
     <p>alunos do p8 de info</p>
+  </section>
+
+  <section id="integrantes" class="integrantes">
+    <h1>Bem vindo ao nosso Portfólio.</h1>
+    <p>alunos do p8 de info</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, beatae corrupti reprehenderit saepe a officiis labore deleniti ullam alias officia maiores, eligendi numquam accusamus quo illum reiciendis aperiam, facilis odio?</p>
   </section>
   
   <!-- END WELCOME SECTION -->
@@ -71,34 +80,34 @@
         </p>
       </a>
       <a
-        href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
+        href="file:///C:/pweb/projetos-n1/Site-Parallax/index-parallax.html"
         target="_blank"
         class="project project-tile"
       >
         <img
           class="project-image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
+          src="foto parallax.png"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Random Quote Machine
+          Parallax
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
       <a
-        href="https://codepen.io/freeCodeCamp/full/wgGVVX"
+        href="file:///C:/pweb/projetos-n1/Pagina-Login/index-login.html"
         target="_blank"
         class="project project-tile"
       >
         <img
           class="project-image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
+          src="foto login.png"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          JavaScript Calculator
+          Site de cadastro
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
