--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -51,10 +51,11 @@
   </section>
 
   <section id="integrantes" class="integrantes">
-    <h1>Bem vindo ao nosso Portfólio.</h1>
-    <p>alunos do p8 de info</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, beatae corrupti reprehenderit saepe a officiis labore deleniti ullam alias officia maiores, eligendi numquam accusamus quo illum reiciendis aperiam, facilis odio?</p>
-  </section>
+    <h1></h1>
+    <p></p>
+    <div class="integra">
+    <p>  Nossa equipe é composta por 5 estudantes do técnico integrado em informática, sendo eles; Abraão Alves, Lucas da Silva,  João Wesley, Laerik Melo e Richardson Ferreira. Atualmente estamos no ultímo período do curso e nesse portfólio mostramos alguns dos nossos trabalhos durante o semestre </p>
+    </div></section>
   
   <!-- END WELCOME SECTION -->
   
