Alteração do projeto index-Formulario. Por João Wesley.

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -52,9 +52,12 @@
 
   <section id="integrantes" class="integrantes">
     <h1></h1>
-    <p></p>
-    <div class="integra">
-    <p>  Nossa equipe é composta por 5 estudantes do técnico integrado em informática, sendo eles; Abraão Alves, Lucas da Silva,  João Wesley, Laerik Melo e Richardson Ferreira. Atualmente estamos no ultímo período do curso e nesse portfólio mostramos alguns dos nossos trabalhos durante o semestre </p>
+    <div class="flex">
+      <div class="integra2">
+        <p>sdoifhsoifh</p></div>
+      <div class="integra">
+        <p>  Nossa equipe é composta por 5 estudantes do técnico integrado em informática, sendo eles; Abraão Alves, Lucas da Silva,  João Wesley, Laerik Melo e Richardson Ferreira. Atualmente estamos no ultímo período do curso e nesse portfólio mostramos alguns dos nossos trabalhos durante o semestre </p>
+      </div>
     </div></section>
   
   <!-- END WELCOME SECTION -->
@@ -113,18 +116,18 @@
         </p>
       </a>
       <a
-        href="https://codepen.io/freeCodeCamp/full/mVEJag"
+        href="file:///C:/pweb/projetos-n1/Pagina-Formulario/index-formulario.html"
         target="_blank"
         class="project project-tile"
       >
         <img
           class="project-image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+          src=".jpg"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Map Data Across the Globe
+           Formulário
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
@@ -163,7 +166,7 @@
     </div>
   
     <a
-      href="https://codepen.io/FreeCodeCamp/"
+      href="https://github.com/CodeYote02/projetos-n1.git"
       class="btn btn-show-all"
       target="_blank"
       >Ver mais<i class="fas fa-chevron-right"></i
