--- a/Pagina-Formulario/index-formulario.html
+++ b/Pagina-Formulario/index-formulario.html
@@ -13,42 +13,44 @@
 <form id="survey-form" action="/my-handling-form-page" method="post">
     <fieldset>
     <legend>Dados Pessoais</legend>
-    <div>
-        <label id="nome-label" for="nome">Nome:</label>
-        <input type="text" required id="nome" name="usuario" placeholder="Digite seu nome"> 
+    <div class="flex">
+        <div class="label"><label id="nome-label" for="nome">Nome:</label></div>
+        <div class="input"><input type="text" required id="nome" name="usuario" placeholder="Digite seu nome"></div> 
     </div>
-    <div>
-        <label id="idade-label" for="idade">Idade:</label>
-        <input type="text" required id="idade" name="idade-usuario" placeholder="Digite sua idade">  
+    <div class="flex">
+        <div class="label"><label id="idade-label" for="idade">Idade:</label></div>
+        <div class="input"><input type="text" required id="idade" name="idade-usuario" placeholder="Digite sua idade"></div>  
     </div>
-    <div>
-        <label id="email-label" for="email">Email:</label>
-        <input type="text" required id="email" name="email-usuario" placeholder="Digite seu email">  
+    <div class="flex">
+        <div class="label"><label id="email-label" for="email">Email:</label></div>
+        <div class="input"><input type="text" required id="email" name="email-usuario" placeholder="Digite seu email"></div>  
     </div>
-    <div>
-        <label id="telefone-label" for="telefone">Telefone:</label>
-        <input type="text" required id="telefone" name="telefone-usuario" placeholder="Digite seu telefone">  
+    <div class="flex">
+        <div class="label"><label id="telefone-label" for="telefone">Telefone:</label></div>
+        <div class="input"><input type="text" required id="telefone" name="telefone-usuario" placeholder="Digite seu telefone"></div>  
     </div>
-    <div>
-        <label id="endereco-label" for="endereco">Endereço:</label>
-        <input type="text" required id="endereco" name="endereco-usuario" placeholder="Digite seu endereço">  
+   
+    <div class="flex">
+        <div class="label"><label id="profissao-label" for="profissao">Profissão:</label></div>
+        <div class="input"><input type="text" required id="profissao" name="profissao-usuario" placeholder="Digite sua profissão"></div>  
     </div>
-    <div>
-        <label id="nacionalidade-label" for="nacionalidade">Nacionalidade:</label>
-        <input type="text" required id="nacionalidade" name="nacionalidade-usuario" placeholder="Digite sua nacionalidade">  
+    <div class="flex">
+        <div class="label"><label id="pai-label" for="pai">Nome do Pai:</label></div>
+        <div class="input"><input type="text" required id="pai" name="pai-usuario" placeholder="Digite o nome de seu Pai"></div>  
     </div>
-    <div>
-        <label id="estado-label" for="estado">Estado:</label>
-        <input type="text" required id="estado" name="estado-usuario" placeholder="Digite seu estado">  
+    <div class="flex">
+        <div class="label"><label id="mae-label" for="mae">Nome da Mãe:</label></div>
+        <div class="input"><input type="text" required id="mae" name="mae-usuario" placeholder="Digite o nome de sua Mãe"></div>  
     </div>
-    <div>
-        <label id="cidade-label" for="cidade">Cidade:</label>
-        <input type="text" required id="cidade" name="cidade-usuario" placeholder="Digite sua cidade">  
+    <div class="flex">
+        <div class="label"><label id="mae-label" for="mae">CPF:</label></div>
+        <div class="input"><input type="text" required id="mae" name="mae-usuario" placeholder="Digite o seu CPF"></div>  
     </div>
-    <div>
-        <label id="profissao-label" for="profissao">Profissão:</label>
-        <input type="text" required id="profissao" name="profissao-usuario" placeholder="Digite sua profissão">  
+    <div class="flex">
+        <div class="label"><label id="mae-label" for="mae">RG:</label></div>
+        <div class="input"><input type="text" required id="mae" name="mae-usuario" placeholder="Digite seu RG"></div>  
     </div>
+  
     </fieldset>
       <fieldset>
         <div>
@@ -69,15 +71,29 @@
         </div>
        
       </fieldset>
-      
-
-
-
-
-
-
-
-      <p>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>aaaaaaaaaaaaaaaaaaaaaaaa</p>
+      <fieldset>
+      <legend>Localidade</legend>
+      <div class="flex">
+        <div class="label"><label id="endereco-label" for="endereco">Endereço:</label></div>
+        <div class="input"><input type="text" required id="endereco" name="endereco-usuario" placeholder="Digite seu endereço"></div>  
+    </div>
+    <div class="flex">
+        <div class="label"><label id="nacionalidade-label" for="nacionalidade">Nacionalidade:</label></div>
+        <div class="input"><input type="text" required id="nacionalidade" name="nacionalidade-usuario" placeholder="Digite sua nacionalidade"></div>  
+    </div>
+    <div class="flex">
+        <div class="label"><label id="estado-label" for="estado">Estado:</label></div>
+        <div class="input"><input type="text" required id="estado" name="estado-usuario" placeholder="Digite seu estado"></div>  
+    </div>
+    <div class="flex">
+        <div class="label"><label id="cidade-label" for="cidade">Cidade:</label></div>
+        <div class="input"><input type="text" required id="cidade" name="cidade-usuario" placeholder="Digite sua cidade"></div>  
+    </div>
+    <div class="flex">
+        <div class="label"><label id="mae-label" for="mae">CEP:</label></div>
+        <div class="input"><input type="text" required id="mae" name="mae-usuario" placeholder="Digite o seu CEP"></div>  
+    </div>
+      </fieldset>
     </form>
 </body>
 </html>
