Alteração do Catalogo de Produtos. por Joao Wesley.

--- a/Catalogo-de-Produtos/index-catalogo.html
+++ b/Catalogo-de-Produtos/index-catalogo.html
@@ -13,8 +13,25 @@
 
 </head>
 <body>
-<div>
-    <nav id="navbar" class="nav">
+<div class="div-nav">
+    <div>
+    <nav id="nav">
+        <ul class="nav-list">
+            <li><div id="logo"><a href="#welcome-section"><img src="imagens/wolf.png" width="50px" alt="Início"> YoteStore</a></div></li>
+            <li><div id="divBusca">
+                <input type="text" id="txtBusca" placeholder="Buscar..."/>
+                <img src="imagens/lupa1.png" width="30px" id="btnBusca" alt="Buscar"/>
+                </div></li>
+                <ul class="nav-list2"><li><a href="#welcome-section"><img src="imagens/login.png" width="50px"> Login</a></li>
+                    <li><a href="#produtos">Produtos</a></li>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#contact">Contatos</a></li></ul>
+                
+        </ul>
+      </nav>
+      </div>
+      <div>
+      <nav id="nav2">
         <ul class="nav-list">
           <li><a href="#welcome-section">Início</a></li>
           <li><a href="#produtos">Produtos</a></li>
@@ -22,6 +39,7 @@
           <li><a href="#contact">Contatos</a></li>
         </ul>
       </nav>
+      </div>
 </div>
 <section id="welcome-section" class="welcome-section">
     <h1>Bem-Vindos a Segunda do Papoco Zenir</h1>
