Alteração do Catalogo de Produtos. Por Joao Wesley.

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="style.css" type="text/css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfólio</title>
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -43,7 +43,7 @@
   
   <!-- END NAV -->
   
-  <!-- START WELCOME SECTION -->
+  <!-- COMEÇO DA PÁGINA INICIAL -->
   
   <section id="welcome-section" class="welcome-section">
     <h1>Bem vindo ao nosso Portfólio.</h1>
@@ -60,9 +60,9 @@
       </div>
     </div></section>
   
-  <!-- END WELCOME SECTION -->
+  <!-- FINAL DA PÁGINA INICIAL -->
   
-  <!-- START PROJECTS SECTION -->
+  <!-- COMEÇO DO CÓDIGO DOS PROJETOS -->
   
   <section id="projects" class="projects-section">
     <h2 class="projects-section-header">Estes são alguns dos nossos projetos pessoais</h2>
@@ -122,7 +122,7 @@
       >
         <img
           class="project-image"
-          src=".jpg"
+          src="foto formulário.png"
           alt="project"
         />
         <p class="project-title">
@@ -138,12 +138,12 @@
       >
         <img
           class="project-image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
+          src=".png"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Wikipedia Viewer
+          Homepage
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
@@ -154,12 +154,12 @@
       >
         <img
           class="project-image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png"
+          src=".png"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Tic Tac Toe Game
+          Landing-page
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
@@ -173,9 +173,9 @@
     ></a>
   </section>
   
-  <!-- END PROJECTS SECTION -->
+  <!-- FINAL DO CÓDIGO DO PROJETO -->
   
-  <!-- START CONTACT SECTION -->
+  <!-- COMEÇO DO CÓDIGO DOS CONTATOS -->
   
   <section id="contact" class="contact-section">
     <div class="contact-section-header">
@@ -206,9 +206,9 @@
     </div>
   </section>
   
-  <!-- END CONTACT SECTION -->
+  <!-- FINAL DO CÓDIGO DOS CONTATOS -->
   
-  <!-- START FOOTER SECTION -->
+  <!-- COMEÇO DO RODAPÉ -->
   
   <footer>
     <p>
@@ -222,7 +222,7 @@
     </p>
   </footer>
   
-  <!-- END FOOTER SECTION -->
+  <!-- FINAL DO RODAPÉ -->
   
 </body>
 </html>
