Pagina-de-Noticias, por Lucas Silva.

--- a/Pagina-de-Noticias/index-noticias.html
+++ b/Pagina-de-Noticias/index-noticias.html
@@ -84,8 +84,8 @@
 </body>
 
 <div style="width:100%">
-  <div class="cabecalho_pagina">
-      <h1>Entre em contato conosco: codeyote02@gmail.com</h1>
+  <div class="contatos_pagina">
+  <h1>Entre em contato: codeyote02@gmail.com</h1>
   </div>
   </div>
 
