Aletração dos projetos.

--- a/Catalogo-de-Produtos/index-catalogo.html
+++ b/Catalogo-de-Produtos/index-catalogo.html
@@ -17,7 +17,7 @@
     <div>
     <nav id="nav">
         <ul class="nav-list">
-            <li><div id="logo"><a href="#welcome-section"><img src="imagens/wolf.png" width="50px" alt="Início"> YoteStore</a></div></li>
+            <li><div id="logo"><a href="../Portifolio-Pessoal/index-portifolio.html"><img src="imagens/wolf.png" width="50px" alt="Início"> YoteStore</a></div></li>
             <li><div id="divBusca">
                 <input type="text" id="txtBusca" placeholder="Buscar..."/>
                 <img src="imagens/lupa1.png" width="30px" id="btnBusca" alt="Buscar"/>
@@ -25,7 +25,7 @@
             </ul>
             <ul class="nav-list">
                 <li id="login"><a href="#welcome-section"><img src="imagens/login.png" width="50px"> Login</a></li>
-            </ul>
+            </ul >
       </nav>
       </div>
       <div>
