--- a/Pagina-Formulario/index-formulario.html
+++ b/Pagina-Formulario/index-formulario.html
@@ -94,6 +94,10 @@
         <div class="input"><input type="text" required id="mae" name="mae-usuario" placeholder="Digite o seu CEP"></div>  
     </div>
       </fieldset>
+      <p> 
+        <input type="submit" value="Enviar"/> 
+        <div><a href="../Portifolio-Pessoal/index-portifolio.html">Retornar ao Portifólio</a></div>
+      </p>
     </form>
 </body>
 </html>
