--- a/Pagina-Login/index-cadastro.html
+++ b/Pagina-Login/index-cadastro.html
@@ -15,7 +15,7 @@
         <div class="content">      
     
           <!--FORMULÁRIO DE CADASTRO-->
-          <h2>CodeYote<span class="blink">_</span></h2>
+          <a href="../Portifolio-Pessoal/index-portifolio.html"><h2>CodeYote<span class="blink">_</span></h2></a>
 
 
           <form method="post" action=""></form>
