--- a/Pagina-de-Noticias/index.html
+++ b/Pagina-de-Noticias/index.html
@@ -14,7 +14,7 @@
 <div style="width:100%">
   <div class="cabecalho_pagina">
     <div style="border-left:8px solid; border-color:#9b0000; padding-left:16px;">
-      <h1 onclick="sorteiaOrdem()" style="margin-bottom:32px;">YoteNews 24H</h1><span>A realidade do dia a dia sendo noticiada</span>
+      <h1 onclick="sorteiaOrdem()" style="margin-bottom:32px;"><a href="../Portifolio-Pessoal/index-portifolio.html">YoteNews 24H</h1></a><span>A realidade do dia a dia sendo noticiada</span>
     </div>
   </div>
 
