--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -68,23 +68,23 @@
     <h2 class="projects-section-header">Estes são alguns dos nossos projetos pessoais</h2>
     <div class="projects-grid">
       <a
-        href="https://Atividade3joaowesley.joaowesley2.repl.co"
+        href="../Catalogo-de-Produtos/index-catalogo.html"
         target="_blank"
         class="project project-tile"
       >
         <img
           class="project-image"
-          src="download (1).png"
+          src="catalogo.PNG"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Medidas de Saúde
+          Catálogo de Produtos
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
       <a
-        href="file:///C:/pweb/projetos-n1/Site-Parallax/index-parallax.html"
+        href="../Site-Parallax/index-parallax.html"
         target="_blank"
         class="project project-tile"
       >
@@ -100,7 +100,7 @@
         </p>
       </a>
       <a
-        href="file:///C:/pweb/projetos-n1/Pagina-Login/index-login.html"
+        href="../Pagina-Login/index-cadastro.html"
         target="_blank"
         class="project project-tile"
       >
@@ -116,7 +116,7 @@
         </p>
       </a>
       <a
-        href="file:///C:/pweb/projetos-n1/Pagina-Formulario/index-formulario.html"
+        href="../Pagina-Formulario/index-formulario.html"
         target="_blank"
         class="project project-tile"
       >
@@ -132,7 +132,7 @@
         </p>
       </a>
       <a
-        href="https://codepen.io/freeCodeCamp/full/wGqEga"
+        href="../Homepage/index-homepage.html"
         target="_blank"
         class="project project-tile"
       >
@@ -148,13 +148,13 @@
         </p>
       </a>
       <a
-        href="https://codepen.io/freeCodeCamp/full/KzXQgy"
+        href="../Landing-Page/index.html"
         target="_blank"
         class="project project-tile"
       >
         <img
           class="project-image"
-          src=".png"
+          src="landing.PNG"
           alt="project"
         />
         <p class="project-title">
@@ -163,6 +163,22 @@
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
+      <a
+      href="../Pagina-de-Noticias/index.html"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="noticias.PNG"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Página de Notícias
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
     </div>
   
     <a
