--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -8,7 +8,7 @@
     <body>
        <div class="container">
          <div class="navbar">
-        <img src="wolf.png" class="logo">
+        <a href="../Portifolio-Pessoal/index-portifolio.html"><img src="wolf.png" class="logo"></a>
         <nav>
             <ul>
                 <li><a href="">Jogos Digitais</a></li>
