Alteracao dos projetos

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -52,11 +52,11 @@
 
   <section id="integrantes" class="integrantes">
     <h1></h1>
-    <div class="flex">
-      <div class="integra2">
-        <p>sdoifhsoifh</p></div>
-      <div class="integra">
-        <p>  Nossa equipe é composta por 5 estudantes do técnico integrado em informática, sendo eles; Abraão Alves, Lucas da Silva,  João Wesley, Laerik Melo e Richardson Ferreira. Atualmente estamos no ultímo período do curso e nesse portfólio mostramos alguns dos nossos trabalhos durante o semestre </p>
+    <div class="equipe">
+      <div><img src="fotoEquipe.jpg">></div>
+      <div class="descricaoEquipe"><p>Nossa equipe é uma excelente opção para empresas que buscam soluções de tecnologia de qualidade, com foco no cliente e no comprometimento com resultados. 
+        Sua capacidade técnica e dedicação garantem o sucesso de cada projeto em que se envolvem. É composta por Abraão Alves, Lucas da Silva, João Wesley, Laerik Melo e Richardson Ferreira. 
+        Atualmente estamos no ultímo período do curso e nesse portfólio mostramos alguns dos nossos trabalhos durante o semestre. </p>
       </div>
     </div></section>
   
@@ -200,12 +200,6 @@
     </div>
     <div class="contact-links">
       <a
-        href="https://facebook.com/freecodecamp"
-        target="_blank"
-        class="btn contact-details"
-        ><i class="fab fa-facebook-square"></i> Facebook</a
-      >
-      <a
         id="profile-link"
         href="https://github.com/CodeYote02/projetos-n1.git"
         target="_blank"
@@ -232,9 +226,9 @@
     </p>
     <p>
       &copy; Created for
-      <a href="https://www.freecodecamp.com/" target="_blank"
-        >CodeYote02 <i class="fab fa-free-code-camp"></i
-      ></a>
+
+        CodeYote02 <i class="fab fa-free-code-camp"></i
+      >
     </p>
   </footer>
   
