--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -138,7 +138,7 @@
       >
         <img
           class="project-image"
-          src=".png"
+          src="homepage.png"
           alt="project"
         />
         <p class="project-title">
