mudanças na pasta images da landing page

--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -8,7 +8,7 @@
     <body>
        <div class="container">
          <div class="navbar">
-        <a href="../Portifolio-Pessoal/index-portifolio.html"><img src="wolf.png" class="logo"></a>
+        <img src="Images/wolf.png" class="logo">
         <nav>
             <ul>
                 <li><a href="">Jogos Digitais</a></li>
@@ -17,7 +17,7 @@
                 <li><a href="">Outros</a></li>
             </ul>
         </nav>
-        <img src="message.png" class="message-icon">
+        <img src="Images/message.png" class="message-icon">
          </div>
 
          <div class="row">
@@ -31,10 +31,10 @@
 
             </div>
             <div class="col-2">
-              <img src="xbox.png" class="controller">
+              <img src="Images/xbox.png" class="controller">
               <div class="color-box"></div>
               <div class="add-btn">
-                <img src="shopping-cart.png">
+                <img src="Images/shopping-cart.png">
                 <p><small>Adicionar ao Carrinho</small></p>
               </div>
 
@@ -43,9 +43,9 @@
          </div>
 
          <div class="social-links">
-            <img src="ig.png">
-            <img src="fb.png">
-            <img src="tw.png">
+            <img src="Images/ig.png">
+            <img src="Images/fb.png">
+            <img src="Images/tw.png">
          </div>
     </div>
            
