Mudanças na pasta "Images" do portifólio

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -53,7 +53,7 @@
   <section id="integrantes" class="integrantes">
     <h1></h1>
     <div class="equipe">
-      <div><img src="fotoEquipe.jpg">></div>
+      <div><img src="Images/fotoEquipe.jpg">></div>
       <div class="descricaoEquipe"><p>Nossa equipe é uma excelente opção para empresas que buscam soluções de tecnologia de qualidade, com foco no cliente e no comprometimento com resultados. 
         Sua capacidade técnica e dedicação garantem o sucesso de cada projeto em que se envolvem. É composta por Abraão Alves, Lucas da Silva, João Wesley, Laerik Melo e Richardson Ferreira. 
         Atualmente estamos no ultímo período do curso e nesse portfólio mostramos alguns dos nossos trabalhos durante o semestre. </p>
@@ -74,7 +74,7 @@
       >
         <img
           class="project-image"
-          src="catalogo.PNG"
+          src="Images/catalogo.PNG"
           alt="project"
         />
         <p class="project-title">
@@ -90,7 +90,7 @@
       >
         <img
           class="project-image"
-          src="foto parallax.png"
+          src="Images/foto parallax.png"
           alt="project"
         />
         <p class="project-title">
@@ -106,7 +106,7 @@
       >
         <img
           class="project-image"
-          src="foto login.png"
+          src="Images/foto login.png"
           alt="project"
         />
         <p class="project-title">
@@ -122,7 +122,7 @@
       >
         <img
           class="project-image"
-          src="foto formulário.png"
+          src="Images/foto formulário.png"
           alt="project"
         />
         <p class="project-title">
@@ -138,7 +138,7 @@
       >
         <img
           class="project-image"
-          src="homepage.png"
+          src="Images/homepage.png"
           alt="project"
         />
         <p class="project-title">
@@ -154,7 +154,7 @@
       >
         <img
           class="project-image"
-          src="landing.PNG"
+          src="Images/landing.PNG"
           alt="project"
         />
         <p class="project-title">
@@ -170,7 +170,7 @@
     >
       <img
         class="project-image"
-        src="noticias.PNG"
+        src="Images/noticias.PNG"
         alt="project"
       />
       <p class="project-title">
