--- a/Homepage/index-homepage.html
+++ b/Homepage/index-homepage.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Styles/homepage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito" rel="stylesheet">
     <title>Homepage</title>
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-logo" src="imagens/photo.jpg" alt="" width="50px">
+        <img class="cabecalho-logo" src="imagens/wolf.png" alt="" width="50px">
         <nav class="cabecalho-menu">
             <a href="file:///C:/Users/user/Desktop/projetos-n1/Portifolio-Pessoal/index-portifolio.html">Portfólio</a>
             <a href="#rodape">Contato</a>
