Alteração do Catálogo de Produtos.

--- a/Catalogo-de-Produtos/index-catalogo.html
+++ b/Catalogo-de-Produtos/index-catalogo.html
@@ -19,9 +19,15 @@
     <div class="div-nav">
         <div>
             <nav id="nav">
-                <div class="logo">
+                        <!-- Definindo uma logo para tela de computador -->
+                <div id="logo-pc" class="logo">
                     <a href="../Portifolio-Pessoal/index-portifolio.html"><img src="imagens/wolf.png" width="50px" alt="Início"> YoteStore</a>
                 </div>
+                <!-- Definindo uma logo para tela de celular -->
+        <div id="logo-phone" class="logo">
+            <a href="../Portifolio-Pessoal/index-portifolio.html"><img src="imagens/wolf.png" width="50px"
+                alt="Início"></a>
+          </div>
                 <ul class="nav-list">
 
                     <li>
@@ -32,9 +38,15 @@
                     </li>
                 </ul>
                 <ul class="nav-list">
-                    <li id="login">
+                                    <!-- Definindo um login para tela de computador -->
+                    <li id="login-pc" class="login">
                         <a href="#welcome-section"><img src="imagens/login.png" width="50px"> Login</a>
                     </li>
+                                    <!-- Definindo um login para tela de celular -->
+                    <li id="login-phone" class="login">
+                        <a href="#welcome-section"><img src="imagens/login.png" width="50px"></a>
+                    </li>
+
                     <div class="carro-compras">
                         <span id="contador">0</span>
                         <img src="imagens/carroCompras.png" alt="Carro" width="40px">
@@ -43,27 +55,39 @@
                 </ul>
             </nav>
         </div>
-        <div>
-            <nav id="nav2">
-                <ul class="nav-list2">
-                    <li><a href="#equipamentos">Equipamentos</a>
-                        <ul class="subitens">
-                            <li><a>Equipamento1</a></li>
-                            <li><a>Equipamento2</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#componentes">Componentes</a>
-                        <ul class="subitens">
-                            <li><a>Componente1</a></li>
-                            <li><a>Componente2</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#industriais">Industriais</a></li>
-                    <li><a href="#residencial">Residencial</a></li>
-                    <li style="width: 50px;"></li>
-                </ul>
-            </nav>
-        </div>
+             <div>                          
+      <div class="nav3">
+        <ul class="nav-list3">
+          <div class="item"><a href="#equipamentos"><img src="imagens/Equipamentos.png"><br>Equipamentos</a>
+            <ul class="subitens">
+              <li>Equipamento1</li>
+              <li>Equipamento2</li>
+              <li>Equipamento3</li>
+              <li>Equipamento4</li>
+            </ul></div>
+          <div class="item"><a href="#componentes"><img src="imagens/Componentes.png"><br>Componentes</a>
+            <ul class="subitens">
+              <li>Componente1</li>
+              <li>Componente2</li>
+              <li>Componente3</li>
+              <li>Componente4</li>
+            </ul></div>
+          <div class="item"><a href="#industriais"><img src="imagens/Industrial.png"><br>Industriais</a>
+          <ul class="subitens">
+            <li>Industrial1</li>
+            <li>Industrial2</li>
+            <li>Industrial3</li>
+            <li>Industrial4</li>
+          </ul></div>
+          <div class="item"><a href="#residencial"><img src="imagens/Residencial.png"><br>Residencial</a>
+          <ul class="subitens">
+            <li>Residencial1</li>
+            <li>Residencial2</li>
+            <li>Residencial3</li>
+            <li>Residencial4</li>
+          </ul>></div>
+        </ul>
+</div></div>
     </div>
     <div class="status-da-pagina">
         <a href="#welcome-section"><img src="imagens/casa.png"> Página inicial</a>
