Alteração do portifolio.

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -172,6 +172,111 @@
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
+    <a
+      href="../../projetos-n2/Clonar-Site/index-clonar.html"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="Images/netflixproj.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Netflix
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    <a
+      href="../../projetos-n2/Consumir-API/index.html"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="Images/APIproj.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        API
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    <a
+      href="../../projetos-n2/Dashboard/index-dashboard.html"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="Images/APIproj.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Dashboard
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    <a
+      href="../../projetos-n2/Lista-de-Tarefas/index-list.html"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="Images/APIproj.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Lista de tarefas
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    <a
+      href="../../projetos-n2/Pagina-de-Evento/index-evento.html"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="Images/Eventoproj.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Página de Evento
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    <a
+      href="../../projetos-n2/Quiz/index.html"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="Images/Eventoproj.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Quiz
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+    <a
+      href="../../projetos-n2/Site-de-Fotografia/index-fotografia.html"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="Images/fotografiaproj.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Site de Fotografia
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
     </div>
   
     <a
