Linkando os projetos.

--- a/Portifolio-Pessoal/index-portifolio.html
+++ b/Portifolio-Pessoal/index-portifolio.html
@@ -188,7 +188,7 @@
       </p>
     </a>
     <a
-      href="file:///C:/Users/Aluno/Desktop/projetos-n2/Consumir-API/index.html"
+      href="../../projetos-n2/Consumir-API/index.html"
       class="project project-tile"
     >
       <img
@@ -208,7 +208,7 @@
     >
       <img
         class="project-image"
-        src="Images/APIproj.png"
+        src="Images/dashboard.png"
         alt="project"
       />
       <p class="project-title">
@@ -223,7 +223,7 @@
     >
       <img
         class="project-image"
-        src="Images/APIproj.png"
+        src="Images/listadetarefas.png"
         alt="project"
       />
       <p class="project-title">
@@ -253,7 +253,7 @@
     >
       <img
         class="project-image"
-        src="Images/Eventoproj.png"
+        src="Images/quiz.png"
         alt="project"
       />
       <p class="project-title">
